dual phase check done

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -688,7 +688,7 @@
                                                             FloatInput:
                                                                 id: phase_shift_g1
                                                                 size_hint_x: num_input_size*1.35
-                                                                disabled: type_g1.text == 'abs' or thickness_g1.text or (type_g1.text in ['mix', 'phase'] and gi_geometry.text != 'free')
+                                                                disabled: type_g1.text == 'abs' or thickness_g1.text or (type_g1.text in ['mix', 'phase'] and gi_geometry.text != 'free' and not dual_phase.active)
                                                                 on_text: root.on_phase_shift('g1')
                                                         BoxLayout:
                                                             LabelHelp:
@@ -789,7 +789,7 @@
                                                                 help_message: parser_info['thickness_g2'][1]
                                                             FloatInput:
                                                                 id: thickness_g2
-                                                                disabled: phase_shift_g2.text
+                                                                disabled: phase_shift_g2.text or dual_phase.active
                                                                 on_text: root.on_grating_thickness('g2')
                                                         BoxLayout:
                                                             LabelHelp:
@@ -804,7 +804,7 @@
                                                             FloatInput:
                                                                 id: phase_shift_g2
                                                                 size_hint_x: num_input_size*1.35
-                                                                disabled: type_g2.text == 'abs' or thickness_g2.text or (type_g2.text == 'mix' and gi_geometry.text != 'free')
+                                                                disabled: type_g2.text == 'abs' or thickness_g2.text or (type_g2.text == 'mix' and gi_geometry.text != 'free' and not dual_phase.active)
                                                                 on_text: root.on_phase_shift('g2')
                                                         BoxLayout:
                                                             LabelHelp:
