started analytical framework

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -913,11 +913,11 @@
                     #on_press: root.calculate_analytical(switch_tab=True)
                     on_press: original_spectrum_absolute.update([np.arange(0.0, 5.0, 0.1), np.arange(0.0, 5.0, 0.1)], [np.arange(0.0, 5.0, 0.1), 2*np.arange(0.0, 5.0, 0.1)], ['bla', 'blubb'])
 
-                Button:
-                    disabled: show_previous_results.active
-                    size_hint_y: None
-                    text: 'Run simulation'
-                    on_press: root.run_simulation()
+#                Button:
+#                    disabled: show_previous_results.active
+#                    size_hint_y: None
+#                    text: 'Run simulation'
+#                    on_press: root.run_simulation()
 
 
         # Left side of splitter
@@ -1081,82 +1081,82 @@
                                     pos_hint: {'top': 0.5}
                                     text: 'CT'
 
-            # Simulation results
-            TabbedPanelItem:
-                text: 'Simulation'
-                id: simulation_results
-                TabbedPanel:
-                    id: simulation_tabs
-                    do_default_tab: False
-                    tab_width: self.size[0]/len(self.tab_list)
-
-                    # Interference pattern
-                    TabbedPanelItem:
-                        text: 'Interference pattern'
-
-                        ScrollView:
-                            FloatLayout:
-                                size_hint_y: None
-                                height: tab_height
-
-                                # No sample
-                                NonFileBrowserLabel:
-                                    pos_hint: {'top': 1}
-                                    text: 'Without sample'
-
-                                # With sample
-                                NonFileBrowserLabel:
-                                    pos_hint: {'top': 0.5}
-                                    text: 'With sample'
-
-                    # Images
-                    TabbedPanelItem:
-                        text: 'Images'
-
-                        ScrollView:
-                            FloatLayout:
-                                size_hint_y: None
-                                height: tab_height
-
-                                # With sample
-                                NonFileBrowserLabel:
-                                    pos_hint: {'top': 1}
-                                    text: 'With sample'
-
-                                        # Visibility
-                    TabbedPanelItem:
-                        text: 'Visibility'
-
-                        ScrollView:
-                            FloatLayout:
-                                size_hint_y: None
-                                height: tab_height
-
-                                GridLayout:
-                                    pos_hint: {'top': 1}
-                                    cols: 2
-                                    StackLayout:
-                                        NonFileBrowserLabel:
-                                            text: 'Gratings'
-                                    StackLayout:
-                                        NonFileBrowserLabel:
-                                            text: '+ Filter'
-
-                    # Performance (Radiography and CT)
-                    TabbedPanelItem:
-                        text: 'Performance'
-
-                        ScrollView:
-                            FloatLayout:
-                                size_hint_y: None
-                                height: tab_height
-
-                                # Radiography
-                                NonFileBrowserLabel:
-                                    pos_hint: {'top': 1}
-                                    text: 'Radiography'
-
-                                # CT
-                                NonFileBrowserLabel:
-                                    pos_hint: {'top': 0.5}
-                                    text: 'CT'
+#            # Simulation results
+#            TabbedPanelItem:
+#                text: 'Simulation'
+#                id: simulation_results
+#                TabbedPanel:
+#                    id: simulation_tabs
+#                    do_default_tab: False
+#                    tab_width: self.size[0]/len(self.tab_list)
+#
+#                    # Interference pattern
+#                    TabbedPanelItem:
+#                        text: 'Interference pattern'
+#
+#                        ScrollView:
+#                            FloatLayout:
+#                                size_hint_y: None
+#                                height: tab_height
+#
+#                                # No sample
+#                                NonFileBrowserLabel:
+#                                    pos_hint: {'top': 1}
+#                                    text: 'Without sample'
+#
+#                                # With sample
+#                                NonFileBrowserLabel:
+#                                    pos_hint: {'top': 0.5}
+#                                    text: 'With sample'
+#
+#                    # Images
+#                    TabbedPanelItem:
+#                        text: 'Images'
+#
+#                        ScrollView:
+#                            FloatLayout:
+#                                size_hint_y: None
+#                                height: tab_height
+#
+#                                # With sample
+#                                NonFileBrowserLabel:
+#                                    pos_hint: {'top': 1}
+#                                    text: 'With sample'
+#
+#                                        # Visibility
+#                    TabbedPanelItem:
+#                        text: 'Visibility'
+#
+#                        ScrollView:
+#                            FloatLayout:
+#                                size_hint_y: None
+#                                height: tab_height
+#
+#                                GridLayout:
+#                                    pos_hint: {'top': 1}
+#                                    cols: 2
+#                                    StackLayout:
+#                                        NonFileBrowserLabel:
+#                                            text: 'Gratings'
+#                                    StackLayout:
+#                                        NonFileBrowserLabel:
+#                                            text: '+ Filter'
+#
+#                    # Performance (Radiography and CT)
+#                    TabbedPanelItem:
+#                        text: 'Performance'
+#
+#                        ScrollView:
+#                            FloatLayout:
+#                                size_hint_y: None
+#                                height: tab_height
+#
+#                                # Radiography
+#                                NonFileBrowserLabel:
+#                                    pos_hint: {'top': 1}
+#                                    text: 'Radiography'
+#
+#                                # CT
+#                                NonFileBrowserLabel:
+#                                    pos_hint: {'top': 0.5}
+#                                    text: 'CT'
